# rivals-st-editor

./: .gitignore  .taurignore  CLI_USAGE.md  Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
LocresReader/: .gitignore  LocresReader.csproj  MarvelRivalsLocresReader.csproj  Program.cs  README.md
RSTE/: App.tsx  index.html  main.js  main.tsx  style.css  types.ts  vite-env.d.ts
RSTE/components/: ConvertingOverlay.tsx  DropCollisionDialog.tsx  Header.tsx  LoadFilesPanel.tsx  Particles.tsx  ProjectManagement.tsx  SettingsModal.tsx  StringTableEditor.tsx  StyledPanel.tsx  TabBar.tsx
RSTE/css/: fonts.css
RSTE/hooks/: useDragDrop.ts  useResetButton.ts
RSTE/utils/: diff.ts  stringTable.ts
UassetToolRivals/: .gitignore
UassetToolRivals/src/UAssetTool/: Program.cs
capabilities/: default.json
src/: cli.rs  lib.rs  main.rs
wix/: main.wxs
