[package]
name = "rivals-st-editor"
version = "0.8.0"
description = "A simple yet powerful web-based editor for batch editing StringTable assets in Marvel Rivals' mod files."
authors = ["Saturn"]
repository = "https://github.com/Saturn/Rivals-ST-Editor"
edition = "2021"

[package.metadata.wix]
upgrade-guid = "F9660860-29AA-45C9-A5F3-B17AAFAF0F29"
path-guid = "030BC80C-A7F2-4AB7-879C-FAFD50E4780F"
license = false
eula = false

[lib]
name = "rivals_st_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }
dirs = "5"
colored = "2"
glob = "0.3"


[profile.dist]
inherits = "release"
lto = "thin"
